[tool.poetry]
name = "desafio-dsa"
version = "0.1.0"
description = "Exercícios de fixação sobre python data analytics"
authors = ["Felipe Toscano <felipe.toscano@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
nose = "^1.3.7"
notebook = "^6.4.0"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
